Adding info for the rest of the blocks of the process

--- a/Final_exam_files/block_400_info.org
+++ b/Final_exam_files/block_400_info.org
@@ -25,7 +25,7 @@
 Για τις συνθήκες λειτουργίας του, εφόσον έχουμε μία καθαρή καλλιέργεια ενός μικροοργανισμού, οι βέλτιστες συνθήκες λειτουργίας είναι αυστηρά καθορισμένες από τον μικροοργανισμό και είναι τυπικά σε ένα στενό εύρος τιμών το οποίο βρίσκεται από βιβλιογραφία. Για τον μικροοργανισμό Candida glycerinogenes ο οποίος έχει χρησιμοποιηθεί στην διεργασία αυτή, βρέθηκε βιβλιογραφικά πως η βέλτιστη συγκέντρωση γλυκόζης είναι 230-250 g/l, η συγκέντρωση ουρίας 2 g/l, η συγκέντρωση φωσφόρου 55-60 mg/l (προστίθεται στην μορφή του corn steep liquor με βάση την βιβλιογραφία), το pH μεταξύ 4-6 και η θερμοκρασία μεταξύ 29 και 33 \( ^oC \) [cite:@zhugeGlycerolProductionNovel2001] . Για τα θρεπτικά συστατικά, βρέθηκε η ποσότητα νερού που απαιτείται για την παραγωγή διαλύματος γλυκόζης 230 g/l με όλη την γλυκόζη της διεργασίας και έπειτα η ποσότητα ουρίας και corn steep liquor (CSL) που απαιτείται ώστε οι συγκεντρώσεις τους να είναι οι επιθυμητές. Το pH δεν χρειάζεται να ρυθμιστεί σε κάποιο επίπεδο καθώς παρουσία του CSL το pH είναι στην επιθυμητή περιοχή ενώ η θερμοκρασία ρυθμίστηκε στους 30 \( ^oC \) καθώς για αυτή την τιμή υπάρχουν κινητικά δεδομένα [cite:@jinByproductFormationNovel2003] . Το CSL δεν προστέθηκε στην προσομοίωση της διεργασίας καθώς δεν υπάρχει στην βάση δεδομένων του Aspen και η πολυπλοκότητα της διεργασίας θα αυξανόταν σημαντικά με την προσθήκη του.
 
 * Υπολογισμοί
-Οι βασικοί υπολογισμοί του block 400 είναι 3. Η στοιχειομετρία της μικροβιακής αντίδρασης, η οποία δεν είναι γνωστή εξ'αρχής, η κινητική της μικροβιακής αντίδρασης και οι υπολογισμοί του εναλλάκτη. Οι υπολογισμοί του εναλλάκτη έγιναν απευθείας στο Aspen για αυτό θα επεξηγηθούν περισσότερο στην προσομοίωση. Για την στοιχειομετρία και την κινητική της μικροβιακής αντίδρασης, βασιστήκαμε σε πειραματικά δεδομένα [cite:@jinByproductFormationNovel2003; @zhugeGlycerolProductionNovel2001] . Ο προσδιορισμός της στοιχειομετρίας της αντίδρασης είναι μία περίπλοκη διαδικασία, ειδικά επειδή δεν είναι γνωστός εκ των προτέρων ο τύπος της βιομάζας. Υπάρχουν διάφορες τεχνικές που μπορούν να ακολουθηθούν για τον προσδιορισμό αυτόν, αλλά αποφασίστηκε πως αντί να υποτεθεί ο μοριακός τύπος της βιομάζας και να προκύψει μία αυθαίρετη μικροβιακή αντίδραση, να υπολογιστούν όσοι συντελεστές μπορούν με βάση τα πειραματικά δεδομένα για τα yields της αντίδρασης και να υπολογιστούν από αυτά ο τύπος της βιομάζας και όσοι στοιχειομετρικοί συντελεστές δεν είναι πειραματικά γνωστοί. Η αναλυτική επεξήγηση των υπολογισμών αυτών παρατίθεται σε σχετικό παράρτημα. Προκύπτει πως η αντίδραση είναι η
+Οι βασικοί υπολογισμοί του block 400 είναι 3. Η στοιχειομετρία της μικροβιακής αντίδρασης, η οποία δεν είναι γνωστή εξ'αρχής, η κινητική της μικροβιακής αντίδρασης και οι υπολογισμοί του εναλλάκτη. Οι υπολογισμοί του εναλλάκτη έγιναν απευθείας στο Aspen για αυτό θα επεξηγηθούν περισσότερο στην προσομοίωση. Για την στοιχειομετρία και την κινητική της μικροβιακής αντίδρασης, βασιστήκαμε σε πειραματικά δεδομένα [cite:@jinByproductFormationNovel2003; @zhugeGlycerolProductionNovel2001] . Ο προσδιορισμός της στοιχειομετρίας της αντίδρασης είναι μία περίπλοκη διαδικασία, ειδικά επειδή δεν είναι γνωστός εκ των προτέρων ο τύπος της βιομάζας. Υπάρχουν διάφορες τεχνικές που μπορούν να ακολουθηθούν για τον προσδιορισμό αυτόν, αλλά αποφασίστηκε πως αντί να υποτεθεί ο μοριακός τύπος της βιομάζας και να προκύψει μία αυθαίρετη μικροβιακή αντίδραση, να υπολογιστούν όσοι συντελεστές μπορούν με βάση τα πειραματικά δεδομένα για τα yields της αντίδρασης και να υπολογιστούν από αυτά ο τύπος της βιομάζας και όσοι στοιχειομετρικοί συντελεστές δεν είναι πειραματικά γνωστοί. Η αναλυτική επεξήγηση των υπολογισμών αυτών παρατίθεται στο παράρτημα Γ. Προκύπτει πως η αντίδραση είναι η
 
 \[ 1.22 S + 0.24U + 2.89 O_2 \rightarrow 0.45 C_{1.48}H_{2.95}O_{0.048}N_{0.11} + G + 0.025E + 0.019Ac + 3.5CO_2 + 2.5H_2O \]
 όπου S η γλυκόζη (υπόστρωμα), U η ουρία, G η γλυκερόλη, Ε η αιθανόλη και Ac το οξικό οξύ.
@@ -40,11 +40,13 @@
 
 Το ρεύμα εισόδου της διεργασίας ορίστηκε με βάση τις συγκεντρώσεις που αναφέρθηκαν παραπάνω ως βέλτιστες. Έπειτα, ορίστηκε νερό ως ο διαλύτης σε μία ποσότητα τέτοια ώστε να υπάρχει όση γλυκόζη στο ρεύμα όση πρέπει να υπάρχει με βάση το block 200. Για τον βιοαντιδραστήρα, ορίστηκε ότι θα λειτουργεί σε σταθερή πίεση και θερμοκρασία (30 \( ^oC \), 1 bar), με χρόνο λειτουργίας 80 ώρες (ο χρόνος που υπήρχε στα πειραματικά δεδομένα).
 
+Το πιό ενδιαφέρον κομμάτι του βιοαντιδραστήρα είναι ότι μόλις βρούμε (με βάση την στοιχειομετρία και τα πειραματικά δεδομένα όπως περιγράφηκε παραπάνω) την βιομάζα του μικροοργανισμού, πρέπει αυτή να προσομοιωθεί στο Aspen. Η λογική που ακολουθήθηκε είναι η ίδια με αυτή που φαίνεται στο παράρτημα Β για την προσομοίωση της κυτταρίνης και της λιγνίνης ως conventional solids. Στην ίδια πηγή [cite:@wooleyDevelopmentASPENPhysical1996] αναφέρεται και η προσομοίωση μίας βιομάζας, για αυτό με κάποιους υπολογισμούς, μπορούν εύκολα να υπολογιστούν τα χαρακτηριστικά της βιομάζας. Οι αναλυτικοί υπολογισμοί αυτοί φαίνονται στο παράρτημα Δ.
+
 Για την κινητική, ορίστηκε η παραπάνω στοιχειομετρία, ενώ για την προσομοίωση του μοντέλου Monod, μπορεί να χρησιμοποιηθεί το μοντέλο LHHW με k=1, E=0, driving force τον αριθμητή του μοντέλου Monod και adsorption των παρανομαστή του. Αξίζει να αναφερθεί πως πρέπει οι μονάδες να είναι σε SI (όπως είναι στην προκειμένη περίπτωση) και στο Aspen πρέπει να μπούν οι λογάριθμοι των σταθερών και όχι οι ίδιες οι σταθερές. Επίσης, πρέπει να επιλεγεί το [C_i] basis στο μενού του driving force ως mass concentration για να έχουν οι συγκεντρώσεις τις σωστές μονάδες.
 
 Για τον εναλλάκτη του block, πρακτικά μας ενδιαφέρει να ψύξουμε το ρεύμα της καθαρής γλυκερόλης καθώς έτσι και αλλιώς δεν θα επαρκέσει για να φτάσει το ρεύμα την επιθυμητή θερμοκρασία. Για αυτό ψάχνουμε την χαμηλότερη θερμοκρασία που μπορούμε να πάμε το ρεύμα, η οποία προκύπτει πως είναι 44 \( ^oC \), δηλαδή ένα ΔΤ = 14 \( ^oC \) από την είσοδο του ψυχρού. Τα προιόντα του αντιδραστήρα είναι σε αρκετά μεγαλύτερη παροχή από ότι το ρεύμα αυτό, για αυτό στην αρχή του block 500 ολοκληρώνεται η θέρμανση αυτή.
 
-* Παράρτημα - Στοιχειομετρία Βιοαντιδραστήρα
+* Παράρτημα Γ - Στοιχειομετρία Βιοαντιδραστήρα
 
 Η βιοαντίδραση που θα χρησιμοποιηθεί είναι μία περίπλοκη αντίδραση της οποίας η στοιχειομετρία μπορεί πολύ δύσκολα να προσδιοριστεί ακριβώς. Επειδή απαιτείται μία έκφραση χημικής αντίδρασης για να μπεί στο ασπεν, θα γίνει μία προσέγγιση της παραγωγής προιόντων με βάση τις ποσότητες που παράγονται. Η αντίδραση που θα υποτεθεί είναι η
 \[ S + U + C \rightarrow G + Ar + E + Ac\]
@@ -88,7 +90,9 @@
 Όπως έχει αναφερθεί στα αρχεία των σχετικών προσομοιώσεων, ο ρυθμός της αντίδρασης αυτής είναι πολύ μεγαλύτερος από ότι θα έπρεπε με αποτέλεσμα η αντίδραση να τελειώνει σε μισή ώρα. Μάλλον, αυτό που φταίει είναι ότι παράγεται πολύ βιομάζα. Όμως, διαπιστώθηκε πως ο συντελεστής της βιομάζας δεν είναι πραγματικά μονάδα, αλλά ξέρουμε την τελική συγκέντρωση της βιομάζας στον αντιδραστήρα. Όμως, δεν μπορούμε να ξέρουμε τον ακριβή στοιχειομετρικό συντελεστή αν δεν ξέρουμε τον μοριακό τύπο, για αυτό η γνώση αυτή προσθέτει μία παραπάνω εξίσωση. Ακόμη, ξέρουμε πως ο αντιδραστήρας λειτουργεί τυπικά με αερισμό 0.1-0.5 vvm (volume of air per volume of liquid per minute). Άρα, είναι γνωστός ο συντελεστής του οξυγόνου και δεν αποτελεί άγνωστο. Άρα, οι εξισώσεις που διαμορφώνονται είναι 5 με 7 αγνώστους.
 
 Το σύστημα είναι ως εξής
-\[ \begin{align*} 4.167 = SbCb + S_{CO2} \\ 6.333 = SbHb + 2S_{H_2O} \\ 4.94 = SbOb + 2S_{CO2} + S_{H_2O} \\ 0.05 = SbNb \\ Sb = \frac{10.385}{12Cb+16Ob+Hb+14Nb}    \end{align*} \]
+\begin{align*}
+4.167 = SbCb + S_{CO2} \\ 6.333 = SbHb + 2S_{H_2O} \\ 4.94 = SbOb + 2S_{CO2} + S_{H_2O} \\ 0.05 = SbNb \\ Sb = \frac{10.385}{12Cb+16Ob+Hb+14Nb}
+\end{align*} 
 
 Η επίλυση του συστήματος αυτού είναι αρκετά δύσκολη και έγινε με την fsolve του Matlab. Λόγω της πολυπλοκότητας του συστήματος, απαιτείται αρκετό trial and error για να βρεθεί το σύστημα σε μία ευσταθή λύση και ακόμη περισσότερο για να βρεθεί λύση που έχει νόημα (όλοι οι άγνωστοι είναι θετικοί και ο στοιχειομετρικός συντελεστής βιομάζας είναι μικρότερος του 1). Στο trial and error αυτό, μεταβαλλόντουσαν όχι μόνο οι αρχικές συνθήκες του αλγορίθμου αλλά και οι βαθμοί ελευθερίας του συστήματος. Καθώς οι συντελεστές CO_{2} και H_{2}O προκαλούν του ίδιου τύπου μεταβολές στο σύστημα και η αύξηση τους οδηγεί απομάκρυνση από το σημείο ισορροπίας μετά από ένα σημείο, θεωρήθηκε απαραίτητο να μεταβληθεί και η παροχή οξυγόνου και να μην χρησιμοποιηθεί η βιβλιογραφική.
 
@@ -118,6 +122,42 @@
 | S_{H2O}  |    2.5 |
 
 Περνόντας τα καινούργια αυτά δεδομένα στο ασπεν και επιβεβαιώνοντας ότι η παροχή οξυγόνου στην τροφοδοσία επαρκεί για την αντίδραση (και δεν είναι σε μεγάλη περίσσεια επειδή δεν υπάρχει λόγος), το ασπεν τρέχει κανονικά την προσομοίωση και βγάζει τα σωστά αποτελέσματα για την ροή μάζας της βιομάζας του μικροοργανισμού στην έξοδο του αντιδραστήρα. Αξίζει να σημειωθεί πως για να είναι σωστός ο ρυθμός της αντίδρασης, πρέπει να διαιρέσουμε την σταθερά στο driving force με τον στοιχειομετρικό συντελεστή της βιομάζας καθώς ο ρυθμός που έχει εισαχθεί είναι ο ρυθμός παραγωγής βιομάζας (μοντέλο Monod). Ο χρόνος παραμονής που προκύπτει δεν έχει καμία απολύτως σχέση και πάλι, αλλά πλέον η προσομοίωση είναι σίγουρα (περίπου, κανείς δεν είναι βέβαιος ποιά είναι η πραγματική λύση του συστήματος) σωστή. 
+
+* Παράρτημα Δ - Προσομοίωση της βιομάζας στο Aspen
+Για την ολοκληρωμένη προσωμοίωση της βιοαντίδρασης, απαιτείται μοντελοποίηση της βιομάζας του μικροοργανισμού C. glycerinogenes στο Aspen. Αυτό είναι δύσκολο διότι δεν υπάρχουν πολλές πληροφορίες για αυτό. Όμως, σύμφωνα με τους [cite:@wooleyDevelopmentASPENPhysical1996] ο μοριακός τύπος της βιομάζας (ο οποίος μπορεί να προκύψει μέσω της στοιχειομετρίας της) αρκεί για όλα τα δεδομένα που θεωρεί απαραίτητα το Aspen. Η βιομάζα μπορεί να οριστεί ως ένα conventional solid στο Aspen. Για αυτό, τα δεδομένα που χρειάζεται το Aspen είναι τα εξής: Μοριακό βάρος, θερμότητα σύνθεσης, θερμοχωρητικότητα και πυκνότητα.
+
+Ο μοριακός τύπος υπολογίζεται με τη βοήθεια του αρχείου biomass_properties ο οποίος χρησιμοποιεί τους υπολογισμούς της στοιχειομετρίας για να προσδιορίσει τον τύπο της βιομάζας. Ο τύπος που προκύπτει είναι ο \( C_{3.33}H_{4.72}O_{3.38}N_{0.05}P_{0.0015} \) . Το μοριακό βάρος υπολογίζεται απευθείας από τα ατομικά βάρη C, H, O, N, P ως MW = 99.592 g/mol. Η πυκνότητα του υλικού μπορεί να υποτεθεί παρόμοια του αμύλου (περίπου 1.5 g/ml). Για την θερμοχωρητικότητα του υλικού, μπορεί να χρησιμοποιηθεί [[https://en.wikipedia.org/wiki/Kopp%27s_law][ο κανόνας του Kopp]] ο οποίος λέει ότι η θερμοχωρητικότητα ενός υλικού μπορεί να προσδιοριστεί από τα στοιχεία του ως \[ C = \sum_{i=1}^{N} C_{i}f_i \] σε \( \left[ \frac{J}{kg \cdot K} \right] \) όπου C_i η θερμοχωρητικότητα του κάθε στοιχείου στις μονάδες αυτές και f_i το κλάσμα μάζας του στοιχείου. Ο νόμος αυτός δουλεύει καλά σε χαμηλές θερμοκρασίες, στις οποίες γίνεται και η βιοαντίδραση. Για την παραπάνω βιομάζα προκύπτει ίσο με 2664 J/kg K.
+
+Τέλος, για την θερμότητα σύνθεσης, μπορεί να υπολογιστεί εύκολα η θερμότητα καύσης της ένωσης και από αυτήν η θερμότητα σύνθεσης.
+Προκύπτει η αντίδραση
+\[  C_{3.33}H_{4.72}O_{3.38}N_{0.05}P_{0.0015} + 5.65 O_2 \rightarrow 2.36H_2O + 3.33CO_2+7.5 \cdot 10^{-4} P_2O_5 + 2.52 \cdot 10^{-2} N_2 \]
+Η επίδραση του πεντοξειδίου του φωσφόρου στην θερμότητα καύσης μπορεί να θεωρηθεί αμελητέα καθώς είναι αρκετές τάξες μεγέθους μικρότερη ποσότητα από αυτές του νερού και του διοξειδίου του άνθρακα ενώ το άζωτο θεωρείται αδρανές. Άρα, η θερμότητα καύσης προκύπτει από τις θερμότητες σύνθεσης H_2O και CO_2 οι οποίες είναι \( -68.7979 \frac{kcal}{mol} \) και \( -94.052 \frac{kcal}{mol} \) αντίστοιχα. Άρα, η θερμότητα σύνθεσης της βιομάζας είναι 475.92 kcal/mol. Αν ληφθεί υπόψην ο φώσφορος είναι 476.2 kcal/mol.
+
+Περνόντας αυτά στο Aspen, βρέθηκαν και άλλα ζητούμενα. Η θερμοκρασία βρασμού του υλικού (που θα υποτεθεί όπως και η πυκνότητα ίση με του αμύλου) και η ενέργεια gibbs σύνθεσης, η οποία θα υπολογιστεί αντίστοιχα με την ενθαλπία. Η ενέργεια Gibbs της σύνθεσης του νερού είναι -237.2 kJ/mol ενώ του CO_2 είναι -394.4 kJ/mol. Προκύπτει μία ενέργεια Gibbs 1875.8 kJ/mol 
+
+Στον παρακάτω πίνακα συνοψίζονται οι απαραίτητες ιδιότητες για να μοντελοποιηθεί η βιομάζα στο Aspen.
+#+CAPTION: Απαραίτητες ιδιότητες βιομάζας
+| Ιδιότητα           | Τιμή              |
+|--------------------+-------------------|
+| Μοριακό Βάρος      | 99.592 (g/mol)    |
+| Πυκνότητα          | 1.5 (g/ml)        |
+| Θερμοχωρητικότητα  | 2664 (J/kg K)     |
+| Θερμότητα σύνθεσης | 475.92 (kcal/mol) |
+
+Τρέχοντας την προσωμοίωση, παρατηρούμε πως το Aspen ζητάει αρκετά περισσότερα δεδομένα από αυτά δυστυχώς. Θέλει γραμμομοριακό όγκο (ο οποίος μπορεί να υπολογιστεί από την πυκνότητα και το μοριακό βάρος), κρίσιμες συνθήκες (πίεση, όγκο και θερμοκρασία) και μία σταθερά του μοντέλου Rackett. Για τον κρίσιμο όγκο, βρέθηκε η αναλογία του κρίσιμου όγκου με τον όγκο στους 25 \( ^oC \) για το νερό και υποτέθηκε παρόμοια. Η κρίσιμη και θερμοκρασία υποτέθηκαν καθώς δεν υπάρχουν δεδομένα για αυτά αλλά ούτε πρόκειται να επηρεάσουν πρακτικά το αποτέλεσμα. Στην πράξη, ο αντιδραστήρας λειτουργεί σε πολύ χαμηλή θερμοκρασία και πίεση για να μας ενδιαφέρουν. Η σταθερά του μοντέλου Rackett σύμφωνα με το help του Aspen είναι από 0.1 εώς 1. Για αυτό υποτέθηκε η τιμή 0.5. Καθώς το μοντέλο αυτό καθορίζει γραμμομοριακό όγκο υγρού, ούτε αυτό έχει πρακτικά σημασία για το μοντέλο.
+
+Για να λύσουμε πιο σωστά το σύστημα, πρέπει να λάβουμε υπόψην και την γνωστή ποσότητα βιομάζας στον αντιδραστήρα. Η επίλυση του συστήματος με την παράμετρο αυτή είναι αρκετά πιο περίπλοκη. Η διαδικασία αυτής περιγράφεται στο προηγούμενο παράρτημα. Προκύπτει μία βιομάζα με τύπο \( C_{6.2}H_{12.38}O_{0.11}N_{0.47} \) η οποία έχει τις παρακάτω τιμές για τις ιδιότητες των παραπάνω πινάκων
+
+\pagebreak
+
+#+CAPTION: Απαραίτητες ιδιότητες βιομάζας
+| Ιδιότητα           | Τιμή              |
+|--------------------+-------------------|
+| Μοριακό Βάρος      | 95.5186 (g/mol)   |
+| Πυκνότητα          | 1.5 (g/ml)        |
+| Θερμοχωρητικότητα  | 4476 (J/kg K)     |
+| Θερμότητα σύνθεσης | 1010.3 (kcal/mol) |
+| Ενέργεια Gibbs     | 3.919 (kJ/kmol)   |
 
 * Βιβλιογραφία
 #+print_bibliography:
